Diff panel accessibility fixed.

--- a/diff/src/org/netbeans/modules/diff/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/visualizer/Bundle.properties
@@ -19,6 +19,9 @@ DiffComponent.prevButton.mnemonic=P
 
 MSG_NoDifference=No differences were found between ''{0}'' and ''{1}''.
 
+ACS_DiffPanelA11yName=Diff Panel
+ACS_DiffPanelA11yDesc=Diff panel.
+
 GraphicalDiffVisualizer.displayName=Graphical Diff Viewer
 GraphicalDiffVisualizer.shortDescription=Graphical color viewer of differences between two sources.
 
