--- a/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
@@ -17,8 +17,16 @@ MSG_ProvidersMissing=There are no diff engines registered in the system
 MSG_VisualizersMissing=There are no diff visualizers registered in the system
 
 LBL_Provider=Engine:
-
+LBL_Provider_Mnemonic=E
 LBL_Visualizer=Visualizer:
+LBL_Visualizer_Mnemonic=V
+
+ACS_ProviderA11yDesc=Engine.
+ACS_ProviderPropertyPanelA11yName=Engine Property Panel
+ACS_ProviderPropertyPanelA11yDesc=Choose diff engine.
+ACS_VisualizerA11yDesc=Visualizer.
+ACS_VisualizerPropertyPanelA11yName=Visualizer Property Panel
+ACS_VisualizerPropertyPanelA11yDesc=Choose diff visualizer.
 
 # DefaultDiffBeanInfo
 PROP_showDiffSelector=Show Diff Service Selector
