Fix of bug #19627: show name of the property edited in Advanced Initialization Code dialog.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -767,11 +767,12 @@ HINT_DesignerSize=The size of the active form designer area.
 
 #Form Custom Editor
 CTL_PropertyEditorDoesNot=Custom Editing of this Property is not Supported
-CTL_AdvancedInitializationCode=Advanced Initialization Code
+# {0} = name of the property for which the initialization code is edited
+FMT_CTL_AdvancedInitializationCode={0} - Advanced Initialization Code
 LAB_SelectMode=Select Mode:
 LAB_SelectMode.mnemonic=M
 ACSD_BTN_SelectMode=N/A
-# 0 = Description of selected custom editor.
+# {0} = description of selected custom editor
 ACSD_FormCustomEditor=Description of selected mode: {0}
 
 CTL_GeneratePostInitializationCode=Generate Post-initialization Code
