--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -107,7 +107,7 @@ OutputWindow=&Output Window
 EditorView=So&urce Editor
 
 #ExecutionViewAction
-ExecutionView=E&xecution Window
+ExecutionView=E&xecution View
 CTL_Execution_view_title=Execution View
 HINT_Execution_view=Execution View
 ACSN_ExecutionList=N/A
