if this module is on autoupdate it will not require IDE restart

--- a/o.apache.tools.ant.module.docs/build.xml
+++ b/o.apache.tools.ant.module.docs/build.xml
@@ -81,6 +81,7 @@ Microsystems, Inc. All Rights Reserved.
                  topdir="."
                  module="netbeans/modules/ant-docs.jar"
                  homepage="http://ant.${homepage.base}/"
+                 needsrestart="false"
                  distribution="http://${dist.base}/ant-docs.nbm">
             <license name="ant-docs-license.txt">
                 <text>For the Ant documentation module itself:</text>
