Several bundle changes suggested by Gloria Geller.

--- a/diff/src/org/netbeans/modules/diff/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/Bundle.properties
@@ -48,7 +48,7 @@ MSG_PatchAppliedSuccessfully=Patch applied successfully. View applied changes?
 PROP_diffService=Default Diff Service
 HINT_diffService=The default diff used to compute and display file differences
 PROP_diffProvider=Default Diff Engine
-HINT_diffProvider=The default engine, that calculates the differences between two files.
+HINT_diffProvider=The default engine that calculates the differences between two files.
 PROP_diffVisualizer=Default Diff Visualizer
 HINT_diffVisualizer=The default visual representation of file differences.
 #PROP_mergeProvider=Default Merge Provider
