--- a/diff/src/org/netbeans/modules/diff/builtin/provider/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/provider/Bundle.properties
@@ -10,4 +10,4 @@
 # Microsystems, Inc. All Rights Reserved.
 
 BuiltInDiffProvider.displayName=Built-in Diff Engine
-BuiltInDiffProvider.shortDescription=Default built-in diff engine, that computes differences between two sources.
+BuiltInDiffProvider.shortDescription=Default built-in diff engine that computes differences between two sources.
