--- a/diff/src/org/netbeans/modules/diff/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/visualizer/Bundle.properties
@@ -27,11 +27,11 @@ GraphicalDiffVisualizer.shortDescription=Graphical color viewer of differences b
 
 # GraphicalDiffVisualizerBeanInfo
 PROP_colorAdded=Color of Added Text
-HINT_colorAdded=The background color of added text
+HINT_colorAdded=The background color of added text.
 PROP_colorMissing=Color of Removed Text
-HINT_colorMissing=The background colot of removed text
+HINT_colorMissing=The background color of removed text.
 PROP_colorChanged=Color of Changed Text
-HINT_colorChanged=The background colot of changed text
+HINT_colorChanged=The background color of changed text.
 
 # TextDiffVisualizerBeanInfo
 PROP_contextMode=Context Mode
@@ -40,4 +40,4 @@ PROP_contextNumLines=Number Of Context Lines
 HINT_contextNumLines=
 
 TextDiffVisualizer.displayName=Textual Diff Viewer
-TextDiffVisualizer.shortDescription=Viewer of differences as a plain text.
+TextDiffVisualizer.shortDescription=Differences between two sources in plain text.
