--- a/diff/src/org/netbeans/modules/diff/cmdline/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/cmdline/Bundle.properties
@@ -10,8 +10,8 @@
 # Microsystems, Inc. All Rights Reserved.
 
 displayName=Command-line Diff
-shortDescription=An external diff engine, that produce list of differences in a format compatible with Unix diff.
+shortDescription=An external diff engine that produces a list of differences in a format compatible with the UNIX diff command.
 runtimeError=The diff command ''{0}'' failed to execute in the system.
 
 PROP_diffCmd=The Diff Command
-HINT_diffCmd=The command, that will be executed to get the differences.
+HINT_diffCmd=The command executed by the external diff engine.
