added package list and module list for automated javadoc documentation

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -376,3 +376,19 @@ config.daily-alpha-nbms=ant, \
         webl, \
         ${local.config.libs}, \
         ${local.config.xml}
+
+; make javadoc for these packages
+; - the list will be shared for signature API tests!
+; - for javadoc you may specify org.foo.*, the trailing ".*"
+;     will be stripped for signature API tests
+javadoc.packages=org.netbeans.api.*, \
+        org.netbeans.spi.*
+config.javadoc=core/javahelp, \
+        core/settings, \
+        diff, \
+        java/api, \
+        java, \
+        lexer, \
+        mdr, \
+        openidex/looks, \
+        xml/api
