Changes for #22922. Publish module API javadoc.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -341,6 +341,7 @@ config.daily-alpha-nbms=ant, \
         java, \
         javacvs, \
         javadoc, \
+        lexer, \
         logger, \
         makefile, \
         metrics, \
