--- a/diff/build.xml
+++ b/diff/build.xml
@@ -74,11 +74,14 @@ Microsystems, Inc. All Rights Reserved.
     </makenbm>
   </target>
 
+  <target name="javadoc" depends="diff-apis"/>
+
   <!-- Diff API documentation -->
   <target name="diff-apis" description="Create Diff API documentation.">
     <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.3/docs/api"/>
     <property name="openide-docs-location" value="http://www.netbeans.org/download/apis/"/>
     <echo message="Build Diff API documentation..."/>
+    <delete dir="DiffAPIs"/>
     <mkdir dir="DiffAPIs"/>
     <javadoc destdir="DiffAPIs"
              packagenames="org.netbeans.api.diff,org.netbeans.spi.diff"
