--- a/lexer/build.xml
+++ b/lexer/build.xml
@@ -19,6 +19,7 @@ Microsystems, Inc. All Rights Reserved.
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
   <property name="binroot" location="../../nbextra"/>
+  <property name="nbroot" location=".."/>
   <!-- <property name="build.compiler.debug" value="on"/> -->
 
   <!-- Patterns for sources that need openide util or antlr classes -->
@@ -40,6 +41,7 @@ Microsystems, Inc. All Rights Reserved.
            deprecation="${build.compiler.deprecation}"
            debug="${build.compiler.debug}">
       <classpath>
+        <pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>
         <pathelement location="${xmlparser}"/>
         <pathelement location="tmp"/>
       </classpath>
@@ -150,5 +152,43 @@ Microsystems, Inc. All Rights Reserved.
       />
  
   </target>
+
+  <!-- Lexer API documentation -->
+  <target name="javadoc" description="Create Lexr API documentation.">
+    <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.3/docs/api"/>
+    <property name="openide-docs-location" value="http://www.netbeans.org/download/apis/"/>
+    <echo message="Build Lexer API documentation..."/>
+    <delete dir="LexerAPIs"/>
+    <mkdir dir="LexerAPIs"/>
+    <javadoc destdir="LexerAPIs"
+             packagenames="org.netbeans.api.*,org.netbeans.spi.*"
+             doctitle="NetBeans Lexer APIs"
+             use="true"
+             splitindex="true"
+             author="false"
+             version="false"
+             maxmemory="64m"
+    >
+      <sourcepath>
+        <pathelement location="libsrc"/>
+      </sourcepath>
+      <classpath>
+        <fileset dir="${nbroot}/openide/netbeans/lib">
+          <include name="openide*.jar" />
+        </fileset>
+      </classpath>
+      <link href="${jdk-docs-location}"
+            offline="true"
+            packagelistLoc="${nbroot}/openide/api/doc"
+      />
+      <link href="${openide-docs-location}"
+            offline="true"
+            packagelistLoc="api/doc/openide"
+      />
+    </javadoc>
+    <zip zipfile="LexerAPIs.zip" basedir="LexerAPIs"/>
+  </target>
+
+
 </project>
 
