#24942: correcting non-I18N'd class name tooltips for FS root nodes. Also providing a useful tooltip specifically for UG sampledirs.

--- a/usersguide/src/org/netbeans/modules/usersguide/Bundle.properties
+++ b/usersguide/src/org/netbeans/modules/usersguide/Bundle.properties
@@ -31,3 +31,6 @@ OpenIDE-Module-Long-Description=\
     The General Online Help module provides online and context-sensitive \
     documentation for basic IDE features such as browsing and editing files; compiling, running, \
     debugging, and internationalizing applications; and using version control inside of the IDE.
+
+# UGModule
+HINT_sampledir=Sample sources to try and a scratch area.
