--- a/xml/test/build.xml
+++ b/xml/test/build.xml
@@ -63,6 +63,7 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="../core/test/qa-functional/src"/>
             <fileset dir="../tax/lib/test/qa-functional/src"/>
             <fileset dir="../tools/test/qa-functional/src"/>
+            <fileset dir="../text-edit/test/qa-functional/src"/>
         </copy>
         <ant antfile="${xtest.module_harness.antfile}" dir="." target="compiler-launcher"/>
     </target>
