Set the display name and help for the property editor of presenters and visualizers. This is a fix of issue #23520.

--- a/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
@@ -28,6 +28,9 @@ ACS_VisualizerA11yDesc=Visualizer.
 ACS_VisualizerPropertyPanelA11yName=Visualizer Property Panel
 ACS_VisualizerPropertyPanelA11yDesc=Choose diff visualizer.
 
+LBL_ProvidersPropEditorTitle=Diff Engines
+LBL_VisualizersPropEditorTitle=Diff Visualizers
+
 # DefaultDiffBeanInfo
 PROP_showDiffSelector=Show Diff Service Selector
 HINT_showDiffSelector=Show panel with engine and visualizer selectors.
