--- a/javahelp/build.xml
+++ b/javahelp/build.xml
@@ -23,6 +23,7 @@ Microsystems, Inc. All Rights Reserved.
     <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../../nbbuild/nbantext.jar"/>
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../../nbbuild/nbantext.jar"/>
     <property name="binroot" location="../../../nbextra"/>
+    <property name="nbroot" location="../.."/>
     <property name="xml-apis" value="xml-apis.jar"/>
 
     <target name="compile">
@@ -97,8 +98,57 @@ Microsystems, Inc. All Rights Reserved.
         <delete dir="Info"/>
     </target>
 
-    <target name="real-clean" depends="clean">
+    <target name="clean-javadoc">
+        <delete dir="javadoc"/>
+        <delete dir="JavahelpAPIs"/>
+    </target>
+
+    <target name="real-clean" depends="clean,clean-javadoc">
         <delete dir="reload"/>
     </target>
+
+  <target name="javadoc" depends="clean-javadoc,javahelp-apis">
+    <copy todir="javadoc">
+      <fileset dir="JavahelpAPIs"/>
+    </copy>
+  </target>
+
+  <!-- Javahelp API documentation -->
+  <target name="javahelp-apis" description="Create Javahelp API documentation.">
+    <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.3/docs/api"/>
+    <property name="openide-docs-location" value="http://www.netbeans.org/download/apis/"/>
+    <echo message="Build Javahelp API documentation..."/>
+    <delete dir="JavahelpAPIs"/>
+    <mkdir dir="JavahelpAPIs"/>
+    <javadoc destdir="JavahelpAPIs"
+             packagenames="org.netbeans.api.*,org.netbeans.spi.*"
+             doctitle="NetBeans Javahelp APIs"
+             use="true"
+             splitindex="true"
+             author="false"
+             version="false"
+             maxmemory="64m"
+    >
+      <sourcepath>
+        <pathelement location="src"/>
+      </sourcepath>
+      <classpath>
+        <fileset dir="${nbroot}/openide/netbeans/lib">
+          <include name="openide*.jar" />
+        </fileset>
+        <pathelement location="${binroot}/core/release/lib/ext/jh.jar"/>
+      </classpath>
+      <link href="${jdk-docs-location}"
+            offline="true"
+            packagelistLoc="${nbroot}/openide/api/doc"
+      />
+      <link href="${openide-docs-location}"
+            offline="true"
+            packagelistLoc="api/doc/openide"
+      />
+    </javadoc>
+    <zip zipfile="JavahelpAPIs.zip" basedir="JavahelpAPIs"/>
+  </target>
+
 
 </project>
