--- a/lexer/build.xml
+++ b/lexer/build.xml
@@ -153,8 +153,14 @@ Microsystems, Inc. All Rights Reserved.
  
   </target>
 
+  <target name="javadoc" depends="lexer-apis">
+    <copy todir="javadoc">
+      <fileset dir="LexerAPIs"/>
+    </copy>
+  </target>
+
   <!-- Lexer API documentation -->
-  <target name="javadoc" description="Create Lexr API documentation.">
+  <target name="lexer-apis" description="Create Lexer API documentation.">
     <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.3/docs/api"/>
     <property name="openide-docs-location" value="http://www.netbeans.org/download/apis/"/>
     <echo message="Build Lexer API documentation..."/>
