#24356 vcsgeneric splitted into submodules

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -55,6 +55,10 @@ local.config.xml=xml/api, \
         xml/tree-edit, \
         xml/css
 
+local.config.vcsprofiles=vcsgeneric/profiles/cvsprofiles, \
+        vcsgeneric/profiles/pvcs, \
+        vcsgeneric/profiles/vss
+
 config.stable=ant, \
         apisupport/lite, \
         applet, \
@@ -101,7 +105,8 @@ config.stable=ant, \
         web/jspparser, \
         web/jspsyntax, \
         ${local.config.libs}, \
-        ${local.config.xml}
+        ${local.config.xml}, \
+        ${local.config.vcsprofiles}
 
 config.stable-with-apisupport=ant, \
         apisupport, \
@@ -152,7 +157,8 @@ config.stable-with-apisupport=ant, \
         web/jspparser, \
         web/jspsyntax, \
         ${local.config.libs}, \
-        ${local.config.xml}
+        ${local.config.xml}, \
+        ${local.config.vcsprofiles}
 
 config.bloated=ant, \
         ant/docs, \
@@ -226,6 +232,7 @@ config.bloated=ant, \
         web/taglibed, \
         ${local.config.libs}, \
         ${local.config.xml}, \
+        ${local.config.vcsprofiles}, \
         openidex/looks
 
 config.bloated-plus-extrabins=ant, \
@@ -301,6 +308,7 @@ config.bloated-plus-extrabins=ant, \
         web/advanced, \
         web/taglibed, \
         ${local.config.libs}, \
+        ${local.config.vcsprofiles}, \
         ${local.config.xml}
 
 ; moduleconfig for nbms in Daily Alpha Update Centre
@@ -374,7 +382,8 @@ config.daily-alpha-nbms=ant, \
         web/advanced, \
         webl, \
         ${local.config.libs}, \
-        ${local.config.xml}
+        ${local.config.xml}, \
+        ${local.config.vcsprofiles}
 
 ; make javadoc for these packages
 ; - the list will be shared for signature API tests!
