--- a/api.xml/build.xml
+++ b/api.xml/build.xml
@@ -108,17 +108,25 @@ Microsystems, Inc. All Rights Reserved.
         <delete file="../xml-api.nbm"/>
         <delete dir="netbeans"/>
         <delete dir="Info"/>
-    </target>
-
-    <target name="real-clean" depends="clean">
         <delete dir="javadoc"/>
+        <delete dir="XmlAPIs"/>
+        <delete file="XmlAPIs.zip"/>
     </target>
 
     <target name="all" depends="clean,nbm"/>
 
-    <target name="javadoc" depends="apichanges">
-        <delete dir="javadoc"/>
-        <mkdir dir="javadoc"/>
+    <target name="javadoc" depends="apichanges,xml-apis">
+      <copy todir="javadoc">
+        <fileset dir=".">
+          <include name="XmlAPIs/**"/>
+          <include name="XmlAPIs.zip"/>
+        </fileset>
+      </copy>
+    </target>
+
+    <target name="xml-apis">
+        <delete dir="XmlAPIs"/>
+        <mkdir dir="XmlAPIs"/>
         
         <!-- external JavaDocs -->
         <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.4/docs/api"/>
@@ -126,7 +134,7 @@ Microsystems, Inc. All Rights Reserved.
         <property name="openide-docs-location" value="http://www.netbeans.org/download/apis"/>
         
         
-        <javadoc destdir="javadoc"
+        <javadoc destdir="XmlAPIs"
                  packagenames="org.netbeans.api.xml.*,org.netbeans.spi.xml.*"
                  doctitle="NetBeans XML Tools  APIs"
                  windowtitle="NetBeans XML Tools APIs"
@@ -156,9 +164,10 @@ Microsystems, Inc. All Rights Reserved.
                   packagelistLoc="doc/external/openide"
             />            
         </javadoc>                
-        <copy todir="javadoc/doc-files/">
+        <copy todir="XmlAPIs/doc-files/">
             <fileset dir="doc/doc-files/"/>
         </copy>
+        <zip zipfile="XmlAPIs.zip" basedir="XmlAPIs"/>
     </target>
     
     <target name="apichanges">
