--- a/diff/build.xml
+++ b/diff/build.xml
@@ -74,9 +74,12 @@ Microsystems, Inc. All Rights Reserved.
     </makenbm>
   </target>
 
-  <target name="javadoc" depends="clean-javadoc,diff-apis">
+  <target name="javadoc" depends="diff-apis">
     <copy todir="javadoc">
-      <fileset dir="DiffAPIs"/>
+      <fileset dir=".">
+        <include name="DiffAPIs/**"/>
+        <include name="DiffAPIs.zip"/>
+      </fileset>
     </copy>
   </target>
 
@@ -118,14 +121,9 @@ Microsystems, Inc. All Rights Reserved.
     <zip zipfile="DiffAPIs.zip" basedir="DiffAPIs"/>
   </target>
 
-  <target name="real-clean" depends="clean,clean-javadoc"/>
-
-  <target name="clean-javadoc">
+  <target name="clean">
     <delete dir="javadoc"/>
     <delete dir="DiffAPIs"/>
-  </target>
-
-  <target name="clean">
     <delete>
       <fileset dir="src">
         <include name="**/*.class"/>
