--- a/lexer/build.xml
+++ b/lexer/build.xml
@@ -124,6 +124,9 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="clean">
+    <delete dir="javadoc"/>
+    <delete dir="LexerAPIs"/>
+    <delete file="LexerAPIs.zip"/>
     <delete>
       <fileset dir="libsrc">
         <include name="**/*.class"/>
@@ -140,6 +143,7 @@ Microsystems, Inc. All Rights Reserved.
   <target name="apichanges-check" description="Check syntax of API changes list. Requires Ant 1.4!">
       <xmlvalidate file="api/doc/changes/apichanges.xml" failonerror="true"/>
   </target>
+
   <target name="apichanges-generate" description="Regenerate HTML from XML API changes list.">
       <!-- Ant 1.3 and 1.4 disagree on style attribute. -->
       <!-- 1.3: treated as a name relative to XML file. -->
@@ -155,7 +159,10 @@ Microsystems, Inc. All Rights Reserved.
 
   <target name="javadoc" depends="lexer-apis">
     <copy todir="javadoc">
-      <fileset dir="LexerAPIs"/>
+      <fileset dir=".">
+        <include name="LexerAPIs/**"/>
+        <include name="LexerAPIs.zip"/>
+      </fileset>
     </copy>
   </target>
 
