Updates for #22922. Publish modules API javadoc

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -398,5 +398,6 @@ config.javadoc=core/javahelp, \
         java, \
         lexer, \
         mdr, \
+        openide, \
         openidex/looks, \
         xml/api
