--- a/web.core/src/org/netbeans/modules/web/core/jsploader/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/jsploader/Bundle.properties
@@ -31,6 +31,7 @@ CTL_JspServletCompilerType=JSP-based Servlet Compilation
 FMT_Not_Valid_FileName=Empty name is not valid for JSP file.
 
 #JspNode
+LBL_jspNodeShortDesc=JavaServer Page File
 CTL_ServletCompilerPropertyName=Servlet Compiler
 CTL_ServletCompilerPropertyHint=Style of compiler to use for the servlet generated from this page.
 PROP_executionSetName=Execution
