Providing short description for HTML objects

--- a/html/src/org/netbeans/modules/html/Bundle.properties
+++ b/html/src/org/netbeans/modules/html/Bundle.properties
@@ -6,7 +6,7 @@
 # http://www.sun.com/
 # 
 # The Original Code is NetBeans. The Initial Developer of the Original
-# Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
+# Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
 
 # module description
@@ -15,10 +15,11 @@ OpenIDE-Module-Display-Category=Web
 OpenIDE-Module-Short-Description=Supports creation, editing, and viewing of HTML files.
 OpenIDE-Module-Long-Description=The HTML module supports creation and editing of HTML files and enables you to view them in a web browser.
 
-
-
 #HtmlLoader
 PROP_HtmlLoader_Name=HTML Objects
+
+# HtmlDataNode
+LBL_htmlNodeShortDesc=HTML File
 
 # Filenames
 Templates/Other/html.html=HTML File
