--- a/xml/test/build.xml
+++ b/xml/test/build.xml
@@ -64,7 +64,8 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="../tax/lib/test/qa-functional/src"/>
             <fileset dir="../tools/test/qa-functional/src"/>
             <fileset dir="../text-edit/test/qa-functional/src"/>
-        </copy>
+            <fileset dir="../tree-edit/test/qa-functional/src"/>
+         </copy>
         <ant antfile="${xtest.module_harness.antfile}" dir="." target="compiler-launcher"/>
     </target>
     
