Improved focus management in wizards, better templates order, ...

--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
@@ -25,6 +25,8 @@ MSG_ENTITY_TOOLTIP={0}
 MSG_ENTITY_OPENING=Opening {0}.
 # {0} contains entity public ID
 MSG_ENTITY_OPENED={0} opened.
+# {0} contains entity public ID
+MSG_opened_entity={0} (read-only)
 
 ## CatalogMounterPanel.java
 CatalogMounterPanel.catalogLabel.mne=T
