--- a/web.monitor/build.xml
+++ b/web.monitor/build.xml
@@ -108,9 +108,16 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="release" if="have-catalina" depends="compile-catalina-check">
-    <copy file="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar" tofile="${nb_root}/tomcatint/tomcat40/netbeans/tomcat404/lib/schema2beans.jar"/>
-    <copy file="netbeans/modules/ext/httpmonitor.jar"                      tofile="${nb_root}/tomcatint/tomcat40/netbeans/tomcat404/lib/httpmonitor.jar"/>
-    <copy file="netbeans/modules/ext/monitor-valve.jar"                    tofile="${nb_root}/tomcatint/tomcat40/netbeans/tomcat404/server/lib/monitor-valve.jar"/>
+    <!-- Carrefully - we copy these files into directory where bundled tomcat resides
+         in order to have all required libraries installed. The assumption here is that 
+         they will be in the same directory as the rest of bundled Tomcat (it means there won't 
+         be a conflict between IDE instalation dir and user dir when installed from NBM
+    --> 
+    <mkdir dir="netbeans/tomcat404/lib"/>
+    <mkdir dir="netbeans/tomcat404/server/lib"/>
+    <copy file="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar" tofile="netbeans/tomcat404/lib/schema2beans.jar"/>
+    <copy file="netbeans/modules/ext/httpmonitor.jar"                      tofile="netbeans/tomcat404/lib/httpmonitor.jar"/>
+    <copy file="netbeans/modules/ext/monitor-valve.jar"                    tofile="netbeans/tomcat404/server/lib/monitor-valve.jar"/>
   </target>
 
 
@@ -152,7 +159,7 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="compile-catalina-check">
-    <available property="have-catalina" file="${nb_root}/tomcatint/tomcat40/netbeans/tomcat404/server/lib/catalina.jar"/>
+    <available property="have-catalina" file="${nb_root}/tomcatint/bundledtomcat/netbeans/tomcat404/server/lib/catalina.jar"/>
   </target>
 
   <target name="compile-catalina" if="have-catalina" depends="compile-server,compile-catalina-check">
@@ -163,7 +170,7 @@ Microsystems, Inc. All Rights Reserved.
 	 includes="**/monitor/catalina/**">
        <classpath>
           <pathelement location="${servlet23}"/>
-          <pathelement location="${nb_root}/tomcatint/tomcat40/netbeans/tomcat404/server/lib/catalina.jar"/> 
+          <pathelement location="${nb_root}/tomcatint/bundledtomcat/netbeans/tomcat404/server/lib/catalina.jar"/> 
        </classpath>
      </javac>
   </target>
