19793 : Editor toolbar doesn't have tooltips

--- a/image/src/org/netbeans/modules/image/Bundle.properties
+++ b/image/src/org/netbeans/modules/image/Bundle.properties
@@ -22,6 +22,7 @@ MSG_ExternalChange=The file {0} was modified externally. Reload it?
 # Action labels
 LBL_ZoomIn=Zoom In
 LBL_ZoomOut=Zoom Out
+LBL_ZoomOut=Show / Hide Grid
 LBL_CustomZoom=Customize Zoom
 LBL_EnlargeFactor=Enlarge Factor:
 LBL_EnlargeFactor_Mnem=E
