--- a/xml/test/build.xml
+++ b/xml/test/build.xml
@@ -114,7 +114,6 @@ Microsystems, Inc. All Rights Reserved.
     
     <!-- Task is use at submodules' build scripts -->
     <target name="build-xml-lib">
-        <ant antfile="${xtest.module_harness.antfile}" dir="." target="prepare-xtest"/>
         <javac classpathref="xmllib.classpath" srcdir="qa-lib/src"/>
         <jar basedir="qa-lib/src" jarfile="qa-lib/xml-test-lib.jar"/>
     </target>
@@ -141,8 +140,8 @@ Microsystems, Inc. All Rights Reserved.
         <pathelement location="${netbeans.home}/modules/ext/nb-editor.jar"/>
         <pathelement location="${nbextra.repository}/jemmy/jemmy.jar"/>                    
         <pathelement location="${nbextra.repository}/jellytools/jelly-nb.jar"/>                    
-        <pathelement location="${nbextra.repository}/xtest/lib/junit.jar"/>                    
-        <pathelement location="${nb.repository}/xtest/lib/junit-ext.jar"/>                    
-        <pathelement location="${nb.repository}/xtest/lib/xtest.jar"/>                    
+        <pathelement location="${xtest.home}/lib/junit.jar"/>                    
+        <pathelement location="${xtest.home}/lib/junit-ext.jar"/>                    
+        <!--pathelement location="${xtest.home}/lib/xtest.jar"/-->                    
     </path>
 </project>
