Fix of bug #24819: internationalizable and human readable name for absolute layout jar mount.

--- a/form/src/org/netbeans/modules/form/resources/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/resources/Bundle.properties
@@ -10,6 +10,7 @@
 # Microsystems, Inc. All Rights Reserved.
 
 # Filenames
+Mount/java/org-netbeans-modules-form-absolutelayout-library.xml=AbsoluteLayout
 Services/formsettings.settings=Form Editor Settings
 Templates/GUIForms/AWTForms=AWT Forms
 Templates/GUIForms/AWTForms/Applet.java=Applet
