--- a/javahelp/build.xml
+++ b/javahelp/build.xml
@@ -99,6 +99,8 @@ Microsystems, Inc. All Rights Reserved.
         <delete dir="javadoc"/>
         <delete dir="JavahelpAPIs"/>
         <delete file="JavahelpAPIs.zip"/>
+        <delete dir="JavaHelpAPIs"/>
+        <delete file="JavaHelpAPIs.zip"/>
     </target>
 
     <target name="real-clean" depends="clean">
@@ -108,22 +110,22 @@ Microsystems, Inc. All Rights Reserved.
   <target name="javadoc" depends="javahelp-apis">
     <copy todir="javadoc">
       <fileset dir=".">
-        <include name="JavahelpAPIs/**"/>
-        <include name="JavahelpAPIs.zip"/>
+        <include name="JavaHelpAPIs/**"/>
+        <include name="JavaHelpAPIs.zip"/>
       </fileset>
     </copy>
   </target>
 
-  <!-- Javahelp API documentation -->
-  <target name="javahelp-apis" description="Create Javahelp API documentation.">
+  <!-- JavaHelp API documentation -->
+  <target name="javahelp-apis" description="Create JavaHelp API documentation.">
     <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.3/docs/api"/>
     <property name="openide-docs-location" value="http://www.netbeans.org/download/apis/"/>
-    <echo message="Build Javahelp API documentation..."/>
-    <delete dir="JavahelpAPIs"/>
-    <mkdir dir="JavahelpAPIs"/>
-    <javadoc destdir="JavahelpAPIs"
+    <echo message="Build JavaHelp API documentation..."/>
+    <delete dir="JavaHelpAPIs"/>
+    <mkdir dir="JavaHelpAPIs"/>
+    <javadoc destdir="JavaHelpAPIs"
              packagenames="org.netbeans.api.*,org.netbeans.spi.*"
-             doctitle="NetBeans Javahelp APIs"
+             doctitle="NetBeans JavaHelp APIs"
              use="true"
              splitindex="true"
              author="false"
@@ -148,7 +150,7 @@ Microsystems, Inc. All Rights Reserved.
             packagelistLoc="api/doc/openide"
       />
     </javadoc>
-    <zip zipfile="JavahelpAPIs.zip" basedir="JavahelpAPIs"/>
+    <zip zipfile="JavaHelpAPIs.zip" basedir="JavaHelpAPIs"/>
   </target>
 
 
