#23576: UI needs to emphasize that Mounting Multiple JAR/ZIp's are possible at the same time

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -564,7 +564,7 @@ Bookmarks=&Bookmarks
 Templates/Folder=Folder
 Templates/Mount=Filesystems
 Templates/Mount/org-netbeans-core-ExLocalFileSystem.settings=Local Directory
-Templates/Mount/org-netbeans-core-ExJarFileSystem.settings=Archive File
+Templates/Mount/org-netbeans-core-ExJarFileSystem.settings=Archive Files
 Mount=Filesystems Settings
 
 # ModuleSelectionPanel
