--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -23,7 +23,7 @@ MSG_LocalFSNoMounted=The filesystem does not exist.
 
 # mount directory dialog
 CTL_JarArchivesMask=Archive Files
-CTL_MountJar_Dialog_Title=Mount Archive File
+CTL_MountJar_Dialog_Title=Mount Archive Files
 MSG_JarFSAlreadyMounted=Archive file already added.
 
 #ArgumentsDialog
