--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -140,10 +140,10 @@ LBL_OperationgSystem=Operating System:
 LBL_Java=Java:
 Edit_properties=Edit properties
 Select_Directory=Select Directory
-Select_Archive=Select Archive
+Select_Archive=Select Archives
 Edit_Properties=Edit Properties
 Template_Chooser=Template Chooser
-Select_Item_to_Mount=Select Item to Mount
+Select_Item_to_Mount=Select Items to Mount
 LBL_VM=VM:
 LBL_Vendor=Vendor:
 LBL_JavaHome=Java Home:
