#25195 do not offer in completion existing attributes JavaCC package documented Unit tests updated (still fails) #24940 CDATA section colored

--- a/xml.text/src/org/netbeans/modules/xml/text/syntax/Bundle.properties
+++ b/xml.text/src/org/netbeans/modules/xml/text/syntax/Bundle.properties
@@ -37,6 +37,7 @@ NAME_coloring_xml-pi-start=XML PI Start Delimiter
 NAME_coloring_xml-pi-end=XML PI End Delimiter
 NAME_coloring_xml-pi-target=XML PI Target
 NAME_coloring_xml-pi-content=XML PI Content
+NAME_coloring_xml-cdata-section=XML CDATA Section
 
 NAME_coloring_dtd-error=DTD Temporary Error
 NAME_coloring_dtd-plain=DTD Text Content
@@ -48,5 +49,5 @@ NAME_coloring_dtd-keyword=DTD Keyword
 NAME_coloring_dtd-target=PI Target
 NAME_coloring_dtd-eol=DTD New Line (deprecated)
 
-## XMLSettingsInitializer
-NAME_WeakXMLActions=Enabled sensitive XML actions
+## XMLViewActions
+NAME_WeakXMLActions=XML Views
