Test almost passes now. Fixed completion of existing names (removes original one).

--- a/xml.text/src/org/netbeans/modules/xml/text/completion/Bundle.properties
+++ b/xml.text/src/org/netbeans/modules/xml/text/completion/Bundle.properties
@@ -11,6 +11,7 @@
 
 #0 represents filtering prefix
 MSG_result=Result of {0}*:
+MSG_encoding_comp=Suggested encodings:
 
 MSG_loading=Loading XML document grammar...
 
@@ -19,3 +20,5 @@ MSG_loading_done=XML document grammar loaded.
 MSG_loading_failed=Cannot load XML document grammar.
 
 MSG_loading_cancel=XML document grammar invalidated.
+
+
