Fix of bug #25239: property type incorporated into property description.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -120,6 +120,15 @@ ACSD_FormCustomEditorAdvanced=N/A
 # displayed text of not set value (for "write only" properties)
 CTL_ValueNotSet=<Not Set>
 
+# value type displayed as tooltip in property sheet for properties without description
+# {0} = property value type name
+HINT_PropertyType=({0})
+
+# value type displayed as tooltip in property sheet for properties having some description
+# {0} = property value type name
+# {1} = the original short description of the property
+HINT_PropertyTypeWithDescription=({0})  {1}
+
 # RADComponent PropertySets
 CTL_PropertiesTab=Properties
 CTL_PropertiesTabHint=Common properties of the JavaBean
