--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/nodes/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/nodes/Bundle.properties
@@ -51,6 +51,7 @@ LBL_task_new_type=Task...
 LBL_choose_task=Choose a task to add:
 # {0} - task name
 LBL_help_on_task=Help on {0}
+LBL_task_help=Task Help
 TITLE_select_task=Select a Task
 PROP_target_name=Target Name
 HINT_target_name=A name by which to refer to this target.
