--- a/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
@@ -131,7 +131,7 @@ PROP_fileName=File:
 # {1} - file extension
 PROP_replaceMsg=File {0}.{1} already exists.\n Do you want to replace it?
 # {0} - file name (including extension)
-MSG_cannot_create_data=Cannot create {0}.\nYou should specify just name of file which will be generated into the same directory.
+MSG_cannot_create_data=Cannot create {0}.\nSpecify a valid file name. Do not enter path to a different directory.
 
 ## ValidatingTextField.java
 MSG_invalid=Invalid value entered.
