New unit tests and related bug fixes.

--- a/api.xml/src/org/netbeans/spi/xml/cookies/Bundle.properties
+++ b/api.xml/src/org/netbeans/spi/xml/cookies/Bundle.properties
@@ -9,7 +9,8 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
 
-## CheckXMLSupport.java
+## TestXMLSupport.java
+MSG_cannot_create_parser=Cannot create properly configured parser!
 # {0} stays for file name that is beiing checked
 MSG_checking=Checking {0}...
 MSG_warning_disk=Warning: Using persistent file version intead of modified one.
@@ -34,3 +35,4 @@ EX_parser_ierr=Probably internal parser error: {0}
 MSG_not_a_doc=Error: Validation can be used only for XML Documents!
 MSG_no_pid=<missing public ID>
 # ---
+
