--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -383,3 +383,22 @@ ACS_PropertiesEditorPane=Properties
 ACSD_PropertiesEditorPane=N/A
 ACSD_CustomPropertiesEditor=N/A
 MSG_PropertiesComments=Commented properties can be lost after saving this change. Continue?
+
+#ExtensionListCustomEditor
+CTL_ELCE_Item=Item:
+CTL_ELCE_ItemList=Item List
+CTL_ELCE_Add=Add
+CTL_ELCE_Change=Edit
+CTL_ELCE_Remove=Remove
+CTL_ELCE_Item_Mnemonic=I
+CTL_ELCE_ItemList_Mnemonic=L
+CTL_ELCE_Add_Mnemonic=A
+CTL_ELCE_Change_Mnemonic=E
+CTL_ELCE_Remove_Mnemonic=R
+ACSD_ELCE=N/A
+ACSD_ELCE_Item=N/A
+ACSD_ELCE_ItemList=N/A
+ACSD_ELCE_Add=N/A
+ACSD_ELCE_Change=N/A
+ACSD_ELCE_Remove=N/A
+CTL_ELCE_Empty=<empty>
