bugfix #14568 - names of toolbar configurations localized, toolbar conf property editor and popup menus updated to work correctly with localized values

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -558,6 +558,8 @@ Toolbars/Standard.xml=Standard
 Toolbars/Memory=Memory
 Toolbars/WorkspaceSwitcher=Workspace Switcher
 Toolbars/StatusLine=Status Line
+Toolbars/Standard.xml=Standard
+Toolbars/Debugging.xml=Debugging
 Actions/Tools=Tools
 Projects=Projects
 Bookmarks=&Bookmarks
